--- a/styles.css
+++ b/styles.css
@@ -22,5 +22,45 @@ header > h1 {
 }
 
 .score-board{
+  margin: 20px auto;
   border: 3px solid white;
+  border-radius: 4px;
+  text-align: center;
+  width: 200px;
+  color: white;
+  font-size: 46px;
+  padding: 15px 20px;
+  font-family: sans-serif;
+  position: relative;
+}
+
+.badge{
+  background: #E2584D;
+  color: white;
+  font-size: 14px;
+  padding: 2px 10px;
+  font-family: Asap. sans-serif;
+}
+
+#user-label{
+  position: absolute;
+  top: 30px;
+  left: -25px;
+}
+
+#computer-label{
+  position: absolute;
+  top: 30px;
+  right: -30px;
+}
+
+.results{
+  font-size: 40px;
+  font-color: white;
+}
+
+.results > p{
+  text-align: center;
+  font-weight: bold;
+  font-family: Asap. sans-serif;
 }
