--- a/styles.css
+++ b/styles.css
@@ -56,11 +56,30 @@ header > h1 {
 
 .results{
   font-size: 40px;
-  font-color: white;
+  color: white;
 }
 
 .results > p{
   text-align: center;
   font-weight: bold;
   font-family: Asap. sans-serif;
+}
+
+.choices{
+  margin: 50px 0;
+  text-align: center;
+}
+
+.choice{
+  border: 4px solid white;
+  border-radius: 50%;
+  margin: 0 20px;
+  padding: 10px;
+  display: inline-block;
+  transition: all 0.3s ease;
+}
+
+.choice:hover{
+  cursor: pointer;
+  background: #E2584D;
 }
