--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ header > h1 {
 }
 
 .choices{
-  margin: 50px 0;
+  margin-top: 50px;
   text-align: center;
 }
 
@@ -82,4 +82,13 @@ header > h1 {
 .choice:hover{
   cursor: pointer;
   background: #E2584D;
+}
+
+#action-message{
+  text-align: center;
+  color: white;
+  font-family: sans-serif;
+  font-weight: bold;
+  font-size: 20px;
+  margin-top: 20px;
 }
