--- a/styles.css
+++ b/styles.css
@@ -1,94 +1,74 @@
-@import url('https://fonts.googleapis.com/css?family=Asap:400,500,700');
+@import url('https://fonts.googleapis.com/css?family=Bangers&subset=latin-ext,vietnamese');
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    font-family: 'Bangers', cursive;
+    padding: 0px;
+    margin: 0px;
 }
 
+header{
+    text-align: center;
+    height: 50px;
+    padding: 20px 0px 0px 0px;
+    background-color: white;
+}
 body{
-  background-color: #24272E;
+    background-color: darkslategray;
 }
-
-header {
-  background: white;
-  padding: 20px;
+#scoreboard{
+    margin: 20px auto;
+    border: 3px solid white;
+    border-radius: 4px;
+    text-align: center;
+    width:150px;
+    font-size: 34pt;
+    padding: 15px 20px;
+    position: relative;
 }
-
-header > h1 {
-  color: #24272E;
-  text-align: center;
-  font-family: Asap. sans-serif;
-}
-
-.score-board{
-  margin: 20px auto;
-  border: 3px solid white;
-  border-radius: 4px;
-  text-align: center;
-  width: 200px;
-  color: white;
-  font-size: 46px;
-  padding: 15px 20px;
-  font-family: sans-serif;
-  position: relative;
-}
-
 .badge{
-  background: #E2584D;
-  color: white;
-  font-size: 14px;
-  padding: 2px 10px;
-  font-family: Asap. sans-serif;
+    background-color: salmon;
+    padding: 5px 10px;
+    color: white;
+    font-size: 20pt;
+}
+#userLabel{
+    position: absolute;
+    top: 20;
+    left: -25px;
+}
+#computerLabel{
+    position: absolute;
+    top: 20;
+    right: -40px;
 }
 
-#user-label{
-  position: absolute;
-  top: 30px;
-  left: -25px;
+
+#message-board{
+    text-align: center;
+    color: white;
+    font-size: 64pt;
 }
 
-#computer-label{
-  position: absolute;
-  top: 30px;
-  right: -30px;
-}
-
-.results{
-  font-size: 40px;
-  color: white;
-}
-
-.results > p{
-  text-align: center;
-  font-weight: bold;
-  font-family: Asap. sans-serif;
-}
 
 .choices{
-  margin-top: 50px;
-  text-align: center;
+    margin: 70px 0;
+    text-align: center;
 }
-
 .choice{
-  border: 4px solid white;
-  border-radius: 50%;
-  margin: 0 20px;
-  padding: 10px;
-  display: inline-block;
-  transition: all 0.3s ease;
+    font-size: 64pt;
+    border: 4px solid white;
+    border-radius: 50%;
+    padding: 20px;
+    margin: 0 20px;
+    display: inline-block;
 }
-
 .choice:hover{
-  cursor: pointer;
-  background: #E2584D;
+    background-color: salmon;
+    transition: all 0.3s ease;
+    cursor: pointer;
 }
 
-#action-message{
-  text-align: center;
-  color: white;
-  font-family: sans-serif;
-  font-weight: bold;
-  font-size: 20px;
-  margin-top: 20px;
+#game-choices{
+    font-size: 24pt;
+    letter-spacing: 3px;
 }
